<resources>
    <string name="app_name">Экзамнационная работа по ООП</string>
    <string name="desc">
        <b>Описание</b>
        \nПриложение для поиска чисел Цукермана в указанном
        диапазоне. Числа Цукермана – это натуральные числа,
        делящиеся нацело на произведение своих цифр.
        Например, число 212, является числом Цукермана,
        поскольку 212 / (2 * 1 * 2) = 53, а 53 это целое число
    </string>
    <string name="author">
        <b>Автор</b>
        \nРудиков Борис Николаевич, гр. ЗПИ-221 (ОмГТУ)
        \nэл. почта: rudikov.boris@yandex.ru
    </string>
    <string name="sequence">
        <b>Порядок действий</b>
        \n1) ввести исходные данные
        \n2) нажать на кнопку \"Начать поиск\"
        \n3) см. \"Протокол\" для оценки полученных результатов
    </string>
    <string name="initial_data_title">Исходные данные</string>
    <string name="search_button_niven">niven</string>
    <string name="search_button_zuckerman">zuckerman</string>
    <string name="search_button_lishler">lishler</string>
    <string name="search_button_best_number">Best number</string>
    <string name="search_button_happy_number">Happy number</string>
    <string name="search_button_kaprecara">kaprecara</string>
    <string name="search_button_kita">kita</string>
    <string name="search_button_kaprecara_square">kaprecara square</string>
    <string name="search_button_armstrong">armstrong</string>
    <string name="search_button_friends_numbers">friends</string>

    <string name="log_title">Протокол</string>
    <string name="clear_button_text">Очистить протокол</string>

</resources>
